--- a/MvxRecyclerViewLeakTest/MvxRecyclerViewLeakTest.Droid/Resources/layout/activity_main.axml
+++ b/MvxRecyclerViewLeakTest/MvxRecyclerViewLeakTest.Droid/Resources/layout/activity_main.axml
@@ -1,11 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_layout"
     android:orientation="vertical"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent">
-  <FrameLayout
-      android:id="@+id/content_frame"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Perform GC"
+        local:MvxBind="Click PerformGC" />
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
