--- a/MvxRecyclerViewLeakTest/MvxRecyclerViewLeakTest.Droid/Resources/layout/fragment_recyclerviewtest.axml
+++ b/MvxRecyclerViewLeakTest/MvxRecyclerViewLeakTest.Droid/Resources/layout/fragment_recyclerviewtest.axml
@@ -4,16 +4,16 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-  <Button
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:text="MemoryLeak"
-      local:MvxBind="Click ButtonClick"/>
-  <MvxRecyclerView
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="MemoryLeak"
+        local:MvxBind="Click ButtonClick" />
+    <MvxRecyclerView
         android:id="@+id/lvTestList"
-          android:layout_width="fill_parent"
-          android:layout_height="fill_parent"
-          android:choiceMode="singleChoice"
-          local:MvxItemTemplate="@layout/listitem_test"
-          local:MvxBind="ItemsSource TestList" />
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:choiceMode="singleChoice"
+        local:MvxItemTemplate="@layout/listitem_test"
+        local:MvxBind="ItemsSource TestList; ItemClick ClickCommand" />
 </LinearLayout>
